workspace = { members = ["load_stl"] }
[package]
name = "embedded-gfx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leftger/embedded-gfx"
readme = "./README.md"
description = "3D graphics rendering for embedded systems"
keywords = [
    "embedded-graphics",
    "graphics",
    "embedded",
]
categories = [
    "embedded",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-core = "0.4.0"
log = "0.4.27"
nalgebra = {version = "0.34.0", default-features = false, features = [ "libm" ] }
line_drawing = "1.0.1"
heapless = "0.8"
embassy-time = { git = "https://github.com/embassy-rs/embassy", package = "embassy-time", default-features = false }

[lib]
name = "embedded_gfx"
path = "src/lib.rs"
test = false

[features]
default = ["row_width_240"]
row_width_160 = []
row_width_240 = []
row_width_320 = []
